--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-MyYoutube is a simple class that help using using gdata api and in a simple way.
+MyYoutube is a simple class that help using gdata api and in a simple way.
